--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>Welcome to my pinterest</h1>
-<p>Sign up <a href="#">here</a>.</p>
-<p>New Sign up <%= link_to "here", "#"%>.</p>
+<div class="jumbotron">
+	<h1>Welcome to my pinterest</h1>
+	<p>Clcik here to <%= link_to "sign up", "#", class: "btn btn-primary btn-lg"%>.</p>
+</div>
